[package]
name = "simple-unc"
version = "0.2.6"
edition = "2024"
rust-version = "1.88"
description = "Simplify Windows UNC path for `fs::canonicalize`"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kojiishi/simple-unc"
documentation = "https://docs.rs/simple-unc/"
readme = "README.md"
keywords = ["path", "UNC", "windows"]
categories = ["development-tools"]
exclude = [".github", ".gitignore", ".vscode", "Taskfile.yml"]

[dependencies]
anyhow = "1.0.102"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WNet",
  "Win32_Storage_FileSystem",
] }
