[package]
name = "simple-path"
version = "0.3.5"
edition = "2024"
rust-version = "1.88"
description = "Simplify Windows UNC path for `fs::canonicalize`"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kojiishi/simple-path"
documentation = "https://docs.rs/simple-path/"
readme = "README.md"
keywords = ["path", "UNC", "windows", "canonicalize"]
categories = ["development-tools"]
exclude = [".github", ".gitignore", ".vscode", "Taskfile.yml"]

[dependencies]
anyhow = "1.0.102"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"
log = "0.4.32"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WNet",
  "Win32_Storage_FileSystem",
  "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
env_logger = "0.11.10"
